<resources>
    <string name="app_name">SlideFlux</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="join_presentation">Join presentation</string>
    <string name="to_join_help">To join the presentation, scan or input the code</string>
    <string name="bad_presentation">There is no presentation with this code</string>
    <string name="qr_code">Enter QR code</string>
    <string name="connect">Connect</string>
    <string name="scan_qr">Scan QR</string>
    <string name="connecting">Connecting to the presentation...</string>
    <string name="user_name">Your Name</string>
</resources>
